<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_restaurant_detail_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/restaurant_detail_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@color/cardview_shadow_start_color" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_restaurant_detail_address"
                style="@style/textStyle"
                android:hint="@string/restaurantAddressHint"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_restaurant_detail_cuisine"
                style="@style/textStyle"
                android:hint="@string/cuisinesHint"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/tv_restaurant_detail_average_cost"
                style="@style/textStyle"
                android:hint="@string/averageCostForTwoHint"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/tv_restaurant_detail_rating"
                style="@style/textStyle"
                android:hint="@string/aggregateRatingHint"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_restaurant_detail_votes"
                style="@style/textStyle"
                android:hint="@string/numberOfVotesHint"
                android:textColor="@android:color/holo_blue_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_detail"
                    style="@style/buttonStyle"
                    android:contentDescription="@string/browse_restaurant_details"
                    android:text="@string/details" />

                <Button
                    android:id="@+id/btn_direction"
                    style="@style/buttonStyle"
                    android:contentDescription="@string/map_direction_to_restaurant"
                    android:text="@string/directions" />
            </LinearLayout>

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/restaurant_adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_Id" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/iv_favourite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="@string/mark_favorite"
        android:focusable="true"
        android:src="@drawable/ic_favorite_border_black_34dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
