<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginStart="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:elevation="6dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:srcCompat="@color/cardview_shadow_start_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="4dp"
        android:paddingEnd="4dp"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_restaurant_thumbnail"
            android:contentDescription="@string/restaurant_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_restaurant_name"
            style="@style/textLabelStyle"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/restaurantNameHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_restaurant_rating"
            style="@style/textImportantLabelStyle"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/ratingHint"
            app:layout_constraintEnd_toStartOf="@id/tv_restaurant_votes"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_name" />

        <TextView
            android:id="@+id/tv_restaurant_votes"
            style="@style/textImportantLabelStyle"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/votesHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_restaurant_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_name" />

        <TextView
            android:id="@+id/tv_restaurant_address"
            style="@style/textImportantLabelStyle"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/restaurantAddressHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_votes" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="iv_restaurant_thumbnail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>